2010-07-01  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (x_set_window_size, initFrameFromEmacs): Renamed
	FRAME_NS_TOOLBAR_HEIGHT to FRAME_TOOLBAR_HEIGHT.

	* nsterm.h (FRAME_NS_TOOLBAR_HEIGHT): Rename to FRAME_TOOLBAR_HEIGH

	* nsmenu.m (update_frame_tool_bar, free_frame_tool_bar): Update
	FRAME_TOOLBAR_HEIGHT.

	* nsmenu.m (free_frame_tool_bar, update_frame_tool_bar): Add
	BLOCK/UNBLOCK_INPUT so asserts don't trigger.

2010-06-30  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (get_future_frame_param, Fmake_terminal_frame): Don't
	check default-frame-alist.

2010-06-30  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (create_process): Avoid using invalid file descriptors.

	* callproc.c (child_setup): Avoid closing a file descriptor twice.

2010-06-30  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (Ffont_get_system_normal_font, Ffont_get_system_font):
	Improve documentation.  Return font regardless of use_system_font.
	(syms_of_xsettings): Improve documentation for font-use-system-font.

2009-06-17  Naohiro Aota  <naota@elisp.net>  (tiny change)

	* xftfont.c (xftfont_open): Check font width one by one also when
	spacing is dual.

	* ftfont.c (ftfont_open): Ditto.

2010-06-30  Glenn Morris  <rgm@gnu.org>

	* s/sol2-6.h (INHIBIT_X11R6_XIM): Remove, handled by configure now.

	* Makefile.in (CANNOT_DUMP): Update for configure name change.

	* s/freebsd.h (USE_MMAP_FOR_BUFFERS):
	* s/irix6-5.h (USE_MMAP_FOR_BUFFERS):
	* s/darwin.h (SYSTEM_MALLOC):
	* s/sol2-10.h (SYSTEM_MALLOC): Move to configure.

2010-06-29  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m: extern declare Vmenu_bar_mode, Vtool_bar_mode.
	(ns_get_screen): Don't assign integer to f.
	(Fx_display_color_cells): Declarations before statements.

2010-06-28  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (x_default_font_parameter): Remove got_from_system
	(Bug#6526).

	* xterm.h (gtk_widget_get_window, gtk_widget_get_mapped)
	(gtk_adjustment_get_page_size, gtk_adjustment_get_upper): New